Few data structure swaps for impls more ideal to their use cases